--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^11.3.1",
     "firebase-admin": "^13.2.0",
     "framer-motion": "^12.4.3",
+    "iconsax-react": "^0.0.8",
     "lucide-react": "^0.469.0",
     "next": "^15.1.4",
     "next-cloudinary": "^6.16.0",
